# mse1h2026-search

./: README.md  customer_sync.md  reports.md
.github/workflows/: check_conflicts.yml  ci.yml
benchmark/: runner.py
benchmark/apache_solr/: README.md  config.py  docker-compose.yml  evaluate_search.py  requirements.txt  setup_solr.py
benchmark/config/: engines.example.yaml  engines.meilisearch.yaml
benchmark/core/: __init__.py  dataset_loader.py  engine_base.py  metrics.py  normalization.py  types.py
benchmark/engines/: __init__.py  apache_solr_engine.py  manticore_engine.py  meilisearch_engine.py  typesense_engine.py
benchmark/manticore/: Dockerfile  README.md  docker-compose.yml  requirements.txt  wordforms.txt
benchmark/meilisearch/: .env.example  README.md  configure_meilisearch.py  docker-compose.yml  meilisearch_benchmark.py  requirements.txt  sync_data.py
benchmark/reports/: full_report.json
benchmark/typesense/: README.md  (+7 more)
search-service/: .gitignore  README.md  docker-compose.yml
search-service/backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml
search-service/backend/data/: articles.json
search-service/backend/indexer/: __init__.py  cms_sync.py  exceptions.py
search-service/backend/models/: schemas.py
search-service/backend/routers/: indexer.py  search.py
search-service/backend/services/: exceptions.py  indexing_service.py  search_service.py
search-service/backend/services/providers/: base.py  mock_provider.py
team_sync/: README.md  Созвон №1 (16.02).md  Созвон №2 (13.03).md  Созвон №3 (24.03).md
(+60 files in other folders)
