[project]
name = "search-service"
version = "0.1.0"
description = "search-service for etu.ru"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
